fix: Fix page banner z-index to be 1 to show behind the fixed week picker and plan info on select menu page.

--- a/store/src/styles/components/page_banner.scss
+++ b/store/src/styles/components/page_banner.scss
@@ -7,6 +7,7 @@
    align-items: center;
    justify-content: center;
    margin-top: 110px;
+   z-index: 1;
    &::after {
       content: '';
       position: absolute;
